<resources>
    <string name="app_name">MultiTool</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawing">Drawing Activity</string>
    <string name="title_activity_movie">Movie Activity</string>
    <string name="title_activity_notepad">Notepad Activity</string>
    <string name="title_activity_reminder">Reminder Activity</string>
    <string name="title_activity_to_do">ToDo Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notepad">Notepad</string>
    <string name="todo_list">Todo List</string>
    <string name="drawing">Drawing</string>
    <string name="reminder">Reminder</string>
    <string name="movie_list">Movie List</string>
    <string name="choose_one_option">Choose One Option</string>
    <string name="choose_default_app">Choose Default App</string>
    <string name="restart">Please restart the App</string>
    <string name="exit">Exit</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="line_color">#212121</string>
    <string name="title_new">Title</string>
    <string name="content_new">Content</string>
    <string name="date">Date</string>
    <string name="moving_handle">Moving handle</string>
    <string name="title_is_required">Title is required</string>
    <string name="content_is_required">Content is required</string>
    <string name="save">Save</string>
    <string name="note_list">Note List</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="note_updated">Note Updated</string>
    <string name="must_implement">" must implement OnStartNewFragmentListener"</string>
    <string name="settings">Settings</string>
    <string name="note_editor">Note Editor</string>
    <string name="table_with_id">"Table saved with id: "</string>
    <string name="delete">Delete</string>
    <string name="save_note_before_deleting">Save note before deleting !</string>
    <string name="delete_with_comma">Delete \'</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete \'</string>
    <string name="question">\' ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Notepad_List">Notepad List</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="choose_brush_size">Choose Brush Size</string>
    <string name="paint">Paint</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="delete_title">Delete \'</string>
    <string name="yes_todo">Yes</string>
    <string name="no_todo">No</string>
    <string name="are_u_sure_you_want_to_delete">Are you sure you want to delete \'</string>
    <string name="question_todo">\' ?</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>


</resources>
