<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/notepad"
            android:title="@string/Notepad_List"/>
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/checklist"
            android:title="@string/todo_list"/>
        <item
            android:id="@+id/nav_drawing"
            android:icon="@drawable/brush"
            android:title="@string/drawing"/>
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/reminder"
            android:title="@string/reminder"/>

        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/movie"
            android:title="@string/movie_list"/>
    </group>
</menu>