<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/noteListTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:text="@string/title_new"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,RtlHardcoded,RtlSymmetry"
            tools:targetApi="jelly_bean"/>

        <TextView
            android:id="@+id/noteListCreated"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:targetApi="jelly_bean"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/handle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/moving_handle"
        android:src="@drawable/reorder"/>
    </LinearLayout>
</RelativeLayout>
